--- a/common_vars.yaml
+++ b/common_vars.yaml
@@ -1,12 +1,12 @@
-terraform_state_bucket_prefix: <add unique bucket prefix here>
-root_account_id: <add root AWS account ID here>
-aws_organization_unit_id: <add organization unit ID here>
+terraform_state_bucket_prefix: s3prebuck
+root_account_id: "889796695136"
+aws_organization_unit_id: "ou-phjv-cl7v4tdl"
 environments:
   development:
     name: "Development"
     short_name: "dev"
-    owner_email: <add account owner (root user) email address here>
+    owner_email: "nivasblr11@gmail.com"
   production:
     name: "Production"
     short_name: "prod"
-    owner_email: <add account owner (root user) email address here>
+    owner_email: "nivasblr11@gmail.com"
